--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="strBtnLogin">Valider</string>
     <string name="strBtnInscription">Inscription</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment"></string>
     <string name="strNom">Nom</string>
     <string name="strPrenom">Prénom</string>
     <string name="strPassword">Password</string>
@@ -12,4 +12,15 @@
     <string name="strTelephone">Télephone</string>
     <string name="strAdresse">Adresse</string>
     <string name="strCodePostal">Code postal</string>
+    <string name="title_activity_contact_client">ContactClientActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Contacts</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
 </resources>
