--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,8 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="strAdresseEmail">Adresse email</string>
+    <string name="strLogin">Login</string>
 
 
     <string name="title_activity_accueil">AccueilActivity</string>
@@ -28,4 +30,7 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="strEnregistrer">Enregistrer</string>
+    <string name="strMotDePasse">Mot de passe</string>
+    <string name="strNumeroDeTelephone">Numero de telephone</string>
 </resources>
