--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="strEnregistrer">Enregistrer</string>
     <string name="strMotDePasse">Mot de passe</string>
     <string name="strNumeroDeTelephone">Numero de telephone</string>
+    <string name="strGetAllQuery">SELECT * FROM clients</string>
 </resources>
