--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="menu_home">Accueil</string>
     <string name="menu_gallery">Catalogue</string>
     <string name="menu_slideshow">Mon Compte</string>
+    <string name="menu_contacts">Contacts</string>
     <string name="strEnregistrer">Enregistrer</string>
     <string name="strMotDePasse">Mot de passe</string>
     <string name="strNumeroDeTelephone">Numero de telephone</string>
